@@ -4,6 +4,8 @@ Revision history for libev, a high-performance and full-featured event loop.
 	- fix a 64 bit overflow issue in the select backend,
           by using fd_mask instead of int for the mask.
         - rename internal sighandler to avoid clash with very old perls.
+        - entering ev_loop will not clear the ONESHOT or NONBLOCKING
+          flags of any outer loops anymore.
         - add ev_async_pending.
 
 3.1  Thu Mar 13 13:45:22 CET 2008
